# algo

./: CMakeLists.txt  README.md  algo.h.in  run.cpp
NetworkModule/CrawlTickers/: CMakeLists.txt  CrawlTickers.cpp  CrawlTickers.hpp
NetworkModule/CrawlTickers/tests/: CMakeLists.txt  DownloadTickers.cpp  GetTickersForLetter.cpp
